# codespaces-blank

SocialMediaApp/: CMakeLists.txt  main.cpp
SocialMediaApp/analytics/: AnalyticsSystem.cpp  AnalyticsSystem.h
SocialMediaApp/app/: AppController.cpp  AppController.h  Menu.cpp  Menu.h
SocialMediaApp/core/: CommentSystem.cpp  CommentSystem.h  PostSystem.cpp  PostSystem.h  UserSystem.cpp  UserSystem.h
SocialMediaApp/data/: banned_words.txt  comments.txt  notifications.txt  posts.txt  users.txt
SocialMediaApp/db/: Database.cpp  Database.h  file_paths.h  storage.cpp  storage.h  utils.h
SocialMediaApp/feed/: feedsystem.cpp  feedsystem.h
SocialMediaApp/models/: Comment.h  Post.h  User.h  activitylog.h  notification.h
SocialMediaApp/parser/: ContentParser.cpp  ContentParser.h  ProfanityFilter.cpp  ProfanityFilter.h
SocialMediaApp/realtime/: NotificationSystem.cpp  NotificationSystem.h
SocialMediaApp/search/: HashtagEngine.cpp  HashtagEngine.h  SearchEngine.cpp  SearchEngine.h
SocialMediaApp/social/: FriendSystem.cpp  FriendSystem.h  RecommendationSystem.cpp  RecommendationSystem.h
SocialMediaApp/utils/: Logger.cpp  Logger.h
